feat: targets (wip)